Bug 1491580 - Use NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification only for MacOSX 10.10 or later versions. r=mstange a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D5968